kubernetes/edm/edm-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edm
  labels:
    istio-injection: enabled
