kubernetes/edm/edm-document-repository-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: edm-document-repository-app
  namespace: edm
  labels:
    spring-boot: "true"
    app: edm-document-repository-app
spec:
  ports:
  - port: 80
    targetPort: 9001
    protocol: TCP
    name: http
  selector:
    app: edm-document-repository-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edm-document-repository-app
  namespace: edm
  labels:
    app: edm-document-repository-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edm-document-repository-app
  template:
    metadata:
      labels:
        app: edm-document-repository-app
    spec:
      containers:
        - name: edm-document-repository-app
          image: localhost:5000/edm-document-repository-app
          ports:
            - containerPort: 9001
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9001
            initialDelaySeconds: 300
            periodSeconds: 30
            failureThreshold: 3
