kubernetes/edm/edm-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: edm-ingress
  namespace: edm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  rules:
  - host: edm.local
    http:
      paths:
      - path: /api/(.*)
        backend:
          serviceName: edm-document-repository-app
          servicePort: 80
      - path: /api/(crawling/.*)
        backend:
          serviceName: edm-document-ingest-app
          servicePort: 80
      - path: /(.*)
        backend:
          serviceName: edm-ui
          servicePort: 80
  - host: edm-admin.local
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: edm-spring-boot-admin-app
          servicePort: 8080
